@@ -1,5 +1,12 @@
 # $Id$
 ---
+- name: package install
+  package:
+    name:
+      - autofs
+      - nfs-utils
+    state: latest
+
 - name: auto.ebs config files
   template:
     src: "{{ item.path }}"
@@ -27,6 +34,15 @@
   set_fact:
     policies:
       - local-automount
+
+- name: /etc/selinux/tmp
+  file:
+    path: /etc/selinux/tmp
+    state: directory
+  when:
+    - ansible_selinux is defined
+    - ansible_selinux != False
+    - ansible_selinux.status == 'enabled'
 
 - name: SELinux (*.te)
   template:
@@ -61,3 +77,6 @@
     semodule -i {{ item }}.pp
   when: pp.changed
   loop: "{{ policies }}"
+
+- name: enable autofs
+  service: name=autofs enabled=yes state=started
